--- a/swipo.css
+++ b/swipo.css
@@ -4,10 +4,6 @@
 	box-sizing: border-box;
 
 	position: absolute;
-	top: 0;
-	left: 0;
-	bottom: 0;
-	right: 0;
 	margin: 0;
 	padding: 0;
 	border: 0;
@@ -16,6 +12,11 @@
 }
 
 .swipo {
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+
 	-webkit-perspective: 800px;
 }
 
@@ -24,12 +25,19 @@
 }
 
 .swipo-panel {
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
 }
 
 /*
 ** NavBar
 */
 .swipo-navbar {
+	top: 0;
+	left: 0;
+	width: 100%;
 	height: 44px;
 
 	text-align: center;
@@ -45,6 +53,9 @@
 
 .swipo-tabbar {
 	top: auto;
+	bottom: 0;
+	left: 0;
+	width: 100%;
 	height: 44px;
 }
 
@@ -56,21 +67,49 @@
 ** PanelDeck
 */
 
-.swipo-paneldeck {}
+.swipo-paneldeck {
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
 
 .swipo-paneldeck > .deck-left
 , .swipo-paneldeck > .deck-center
 , .swipo-paneldeck > .deck-right {
-	-webkit-transition: left ease 300ms, right ease 300ms;
+	-webkit-transition: left ease 300ms, width ease 300ms;
 }
 
-.swipo-paneldeck > .deck-left { right: 100%; }
-.swipo-paneldeck.left > .deck-left { right: 80%; }
-.swipo-paneldeck.left > .deck-center { left: 20%; }
+.swipo-paneldeck > .deck-center {
+	top: 0;
+	left: auto;
+	bottom: 0;
+	right: auto;
+	width: 100%;
+}
 
-.swipo-paneldeck > .deck-right { left: 100%; }
-.swipo-paneldeck.right > .deck-right { left: 80%; }
-.swipo-paneldeck.right > .deck-center { right: 20%; }
+.swipo-paneldeck > .deck-left {
+	top: 0;
+	left: 0;
+	width: 0;
+	max-width: 20%;
+	height: 100%;
+}
+.swipo-paneldeck.left > .deck-left { width: 20%; }
+.swipo-paneldeck.left > .deck-center { left: 20%; width: 80% }
+
+.swipo-paneldeck > .deck-right {
+	top: 0;
+	left: auto;
+	right: 0;
+	width: 0;
+	max-width: 20%;
+	height: 100%;
+}
+.swipo-paneldeck.right > .deck-right { width: 20%; }
+.swipo-paneldeck.right > .deck-center { width: 80%; }
+
+.swipo-paneldeck.left.right > .deck-center { width: 60%; }
 
 /************
 **
