--- a/swipo.css
+++ b/swipo.css
@@ -4,70 +4,58 @@
 	box-sizing: border-box;
 
 	position: absolute;
+	top: 0;
+	bottom: auto;
+	left: 0;
+	right: auto;
+	width: 100%;
+	height: 100%;
 	margin: 0;
 	padding: 0;
 	border: 0;
+}
 
-	cursor: default;
+/* Helper class - Turns off transitions for a Swipo element and all it's child Swipo elements */
+[class*="swipo"].no-transitions,
+[class*="swipo"].no-transitions * {
+	-webkit-transition: none !important;
 }
 
 .swipo {
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-
 	-webkit-perspective: 800px;
-}
-
-.swipo.no-transitions * {
-	-webkit-transition: none !important;
 }
 
 .swipo-panel {}
 
 /*
-** NavBar
+** NavBar & TabBar
 */
-.swipo-navbar {
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 44px;
+.swipo-panel > .swipo-navbar
+, .swipo-panel > .swipo-tabbar {
+	height: 44px; /* Feel free to change this to your needs */
+}
 
+.swipo-panel> .swipo-navbar {
 	text-align: center;
 }
+.swipo-panel.has-navbar { padding-top: 44px; /* Has to be NavBar height! */ }
 
-.swipo-panel.has-navbar {
-	padding-top: 44px;
-}
-
-/*
-** TabBar
-*/
-
-.swipo-tabbar {
+.swipo-panel > .swipo-tabbar {
 	top: auto;
 	bottom: 0;
-	left: 0;
-	width: 100%;
-	height: 44px;
 }
+.swipo-panel.has-tabbar { padding-bottom: 44px; /* Has to be TabBar height! */ }
 
-.swipo-panel.has-tabbar { padding-bottom: 44px; }
-
-.swipo-pull { bottom: auto; height: auto; }
+/*
+** Pull
+*/
+.swipo-panel > .swipo-pull { display: none; }
 
 /*
 ** PanelDeck
 */
 
-.swipo-paneldeck {
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-}
+.swipo-paneldeck {}
 
 .swipo-paneldeck > .deck-left
 , .swipo-paneldeck > .deck-center
@@ -76,29 +64,24 @@
 }
 
 .swipo-paneldeck > .deck-center {
-	top: 0;
-	left: 0;
 	bottom: 0;
 	right: 0;
+	width: auto;
+	height: auto;
 }
 
 .swipo-paneldeck > .deck-left {
-	top: 0;
-	left: 0;
 	width: 0;
 	max-width: 20%;
-	height: 100%;
 }
 .swipo-paneldeck.left > .deck-left { width: 20%; }
 .swipo-paneldeck.left > .deck-center { left: 20%; }
 
 .swipo-paneldeck > .deck-right {
-	top: 0;
 	left: auto;
 	right: 0;
 	width: 0;
 	max-width: 20%;
-	height: 100%;
 }
 .swipo-paneldeck.right > .deck-right { width: 20%; }
 .swipo-paneldeck.right > .deck-center { right: 20%; }
