--- a/swipo.css
+++ b/swipo.css
@@ -74,8 +74,8 @@
 	width: 0;
 	max-width: 20%; /* (Only px / % !) Feel free to change this to your needs */
 }
-.swipo-paneldeck.left > .deck-left { width: 20%; }
-.swipo-paneldeck.left > .deck-center { left: 20%; }
+.swipo-paneldeck.left-in > .deck-left { width: 20%; }
+.swipo-paneldeck.left-in > .deck-center { left: 20%; }
 
 .swipo-paneldeck > .deck-right {
 	left: auto;
@@ -83,8 +83,8 @@
 	width: 0;
 	max-width: 20%; /* (Only px / % !) Feel free to change this to your needs */
 }
-.swipo-paneldeck.right > .deck-right { width: 20%; }
-.swipo-paneldeck.right > .deck-center { right: 20%; }
+.swipo-paneldeck.right-in > .deck-right { width: 20%; }
+.swipo-paneldeck.right-in > .deck-center { right: 20%; }
 
 /************
 **
