[JS] Added device test functions, improved convertTouchEvent [CSS] .deck-center gets moved and not sized on Mobile

--- a/swipo.css
+++ b/swipo.css
@@ -106,11 +106,11 @@
 @media (max-width: 767px) {
 	.swipo-paneldeck > .deck-left { max-width: 80% }
 	.swipo-paneldeck.left-in > .deck-left { width: 80%; }
-	.swipo-paneldeck.left-in > .deck-center { left: 80%; }
+	.swipo-paneldeck.left-in > .deck-center { left: 80%; right: -80%; }
 
 	.swipo-paneldeck > .deck-right { max-width: 80%; }
 	.swipo-paneldeck.right-in > .deck-right { width: 80%; }
-	.swipo-paneldeck.right-in > .deck-center { right: 80%; }
+	.swipo-paneldeck.right-in > .deck-center { left: -80%; right: 80%; }
 }
 
 /*
